2025 - Day 4 - extra methods in Coord and Grid classes